<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_instructions_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/backgroundactivity"
    tools:context="com.ach.alex.bullsandcowsreloaded.InstructionsScreen">

    <!--TITLE-->
    <TextView
        android:id="@+id/instructions_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/main_margin_top"
        android:layout_centerHorizontal="true"
        android:typeface="serif"
        android:textSize="@dimen/instructions_title"
        android:text="@string/instructions_title"/>

    <!--CONTENT-->
    <TextView
        android:id="@+id/instructions_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/instructions_title"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:text="@string/instructions_content"
        android:textSize="@dimen/instructions_text"/>

    <!--EXAMPLE-->
    <TextView
        android:id="@+id/instructions_example"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/instructions_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:text="@string/instructions_example"
        android:textSize="@dimen/instructions_text"/>

    <!--BACK TO MAIN MENU-->
    <Button
        android:id="@+id/instructions_back"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/instructions_example"
        android:background="@drawable/backgroundbutton"
        android:text="@string/back"
        android:textSize="@dimen/button_fontsize"/>

</RelativeLayout>
