<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_play_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/backgroundactivity"
    tools:context="com.ach.alex.bullsandcowsreloaded.PlayScreen">

    <!--ENTER NAME-->
    <!--<EditText-->
        <!--android:id="@+id/play_name_input"-->
        <!--android:layout_width="@dimen/button_width"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_above="@+id/play_number_input"-->
        <!--android:textAlignment="center"-->
        <!--android:hint="@string/play_introduce_name"-->
        <!--android:textSize="@dimen/play_text"-->
        <!--android:inputType="text"-->
        <!--android:maxLength="32"-->
        <!--android:background="@drawable/edittextstyle"-->
        <!--android:imeOptions="actionDone"/>-->

    <!--ENTER GUESS-->
    <EditText
        android:id="@+id/play_number_input"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/play_check_result"
        android:layout_marginTop="@dimen/main_horizontal_margin"
        android:textAlignment="center"
        android:hint="@string/play_introduce_number"
        android:textSize="@dimen/play_text"
        android:inputType="number"
        android:maxLength="4"
        android:background="@drawable/edittextstyle"/>

    <!--HINT-->
    <TextView
        android:id="@+id/play_check_result"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_above="@+id/play_check"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/main_horizontal_margin"
        android:textSize="@dimen/play_text"
        android:textAlignment="center"
        android:hint="@string/play_hint"
        android:background="@drawable/edittextstyle"/>

    <!--CHECK-->
    <Button
        android:id="@+id/play_check"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_above="@+id/play_show_solution"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/main_horizontal_margin"
        android:background="@drawable/backgroundbutton"
        android:text="@string/play_check"
        android:textSize="@dimen/button_fontsize"/>

    <!--SHOW SOLUTION-->
    <Button
        android:id="@+id/play_show_solution"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/main_horizontal_margin"
        android:layout_marginBottom="@dimen/main_horizontal_margin"
        android:background="@drawable/backgroundbutton"
        android:text="@string/play_show_solution"
        android:textSize="@dimen/button_fontsize"/>

    <!--BACK TO MENU-->
    <Button
        android:id="@+id/play_back"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_below="@+id/play_show_solution"
        android:layout_centerHorizontal="true"
        android:background="@drawable/backgroundbutton"
        android:text="@string/back"
        android:textSize="@dimen/button_fontsize"/>

</RelativeLayout>
