<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/backgroundactivity"
    tools:context="com.ach.alex.bullsandcowsreloaded.MainScreen">

    <!--TITLE-->
    <ImageView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/title"
        android:layout_marginTop="@dimen/main_margin_top"/>

    <!--line-->
    <View
        android:layout_width="wrap_content"
        android:layout_height="5dip"
        android:background="#000000"
        android:layout_below="@id/main_title"
        android:layout_marginTop="@dimen/activity_horizontal_margin"/>

    <!--START-->
    <Button
        android:id="@+id/main_start"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/main_instructions"
        android:background="@drawable/backgroundbutton"
        android:text="@string/start"
        android:textSize="@dimen/button_fontsize"/>

    <!--INSTRUCTIONS-->
    <Button
        android:id="@+id/main_instructions"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/backgroundbutton"
        android:layout_marginTop="@dimen/main_horizontal_margin"
        android:layout_marginBottom="@dimen/main_horizontal_margin"
        android:text="@string/instructions"
        android:textSize="@dimen/button_fontsize"/>

    <!--HIGHSCORE-->
    <Button
        android:id="@+id/main_highscore"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/main_instructions"
        android:background="@drawable/backgroundbutton"
        android:text="@string/highscore"
        android:textSize="@dimen/button_fontsize"/>

    <!--Logo-->
    <!--<ImageView-->
        <!--android:id="@+id/main_logo"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:src="@drawable/logo"-->
        <!--android:layout_below="@id/main_highscore"-->
        <!--android:layout_marginTop="@dimen/main_margin_top"/>-->

</RelativeLayout>
